Resolve styling on safari

--- a/src/App.scss
+++ b/src/App.scss
@@ -58,7 +58,7 @@ button, a {
   flex-direction: row;
   width: 100%;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   margin-bottom: 25px;
   .selector {
     align-items: center;
