--- a/src/core/header/Header.scss
+++ b/src/core/header/Header.scss
@@ -41,7 +41,7 @@ Header {
         display: inline-flex;
         flex-direction: row;
         align-items: center;
-        justify-content: end;
+        justify-content: flex-end;
         width: 100%;
         div {
             display: flex;
